fix(Calendar, Picker): Fix calendar and picker's title color in dark mode (#10403)
* 解决Dialog组件的标题、消息内容在深色模式下仍显示黑色的问题

* 解决Picker和Calendar组件的Title在深色模式下为黑色的问题

--- a/packages/vant/src/calendar/index.less
+++ b/packages/vant/src/calendar/index.less
@@ -61,6 +61,7 @@ body {
   &__month-title,
   &__header-title,
   &__header-subtitle {
+    color: var(--van-text-color);
     height: var(--van-calendar-header-title-height);
     font-weight: var(--van-font-bold);
     line-height: var(--van-calendar-header-title-height);
