--- a/packages/vant/src/picker/index.less
+++ b/packages/vant/src/picker/index.less
@@ -60,6 +60,7 @@ body {
   }
 
   &__title {
+    color: var(--van-text-color);
     max-width: 50%;
     font-weight: var(--van-font-bold);
     font-size: var(--van-picker-title-font-size);
